tests/sema/veo/35_error_call_non_existent.veo
func main() {
    // expected-error@+1: cannot find function 'ghost_func' in this scope
    ghost_func();
}
